add getAllUsers
